force-app/main/default/objects/Collateral_Detail__c/Collateral_Detail__c.object-meta.xml
<CustomObject>
    <label>Collateral Detail</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Collateral Detail No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>