force-app/main/default/objects/Collateral_Detail__c/fields/Appraisal_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appraisal Date</label>
    <type>Date</type>
</CustomField>