force-app/main/default/objects/Collateral_Detail__c/fields/Appraisal_Value__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Value__c</fullName>
    <label>Appraisal Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>