force-app/main/default/objects/Collateral_Detail__c/fields/Collateral__c.field-meta.xml
<CustomField>
    <fullName>Collateral__c</fullName>
    <label>Collateral</label>
    <referenceTo>Collateral__c</referenceTo>
    <relationshipLabel>Collateral Detail</relationshipLabel>
    <relationshipName>Collateral_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>