force-app/main/default/objects/Collateral_Detail__c/fields/Collateral_Code__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collateral Code</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>