force-app/main/default/objects/Collateral_Detail__c/fields/Collateral_External_Key__c.field-meta.xml
<CustomField>
    <fullName>Collateral_External_Key__c</fullName>
    <description>TMB Cust ID + Collateral No</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Collateral External Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>