force-app/main/default/objects/Collateral_Detail__c/fields/Collateral_Joint__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Joint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collateral Joint</label>
    <length>5</length>
    <type>Text</type>
</CustomField>