force-app/main/default/objects/Collateral_Detail__c/fields/Collateral_Joint_BOT__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Joint_BOT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Related BOT-CUST-ID</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>