force-app/main/default/objects/Collateral_Detail__c/fields/Collateral_Joint_BOT_Name__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Joint_BOT_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Related BOT-CUST-NAME</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>