force-app/main/default/objects/Collateral_Detail__c/fields/Collateral_No__c.field-meta.xml
<CustomField>
    <fullName>Collateral_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collateral No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>