force-app/main/default/objects/Collateral_Detail__c/fields/Collateral_Owner__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collateral Owner</label>
    <length>200</length>
    <type>Text</type>
</CustomField>