force-app/main/default/objects/Collateral_Detail__c/fields/Data_As_of__c.field-meta.xml
<CustomField>
    <fullName>Data_As_of__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data As of</label>
    <type>Date</type>
</CustomField>