force-app/main/default/objects/Collateral_Detail__c/fields/Pledge_Value__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Value__c</fullName>
    <label>Pledge Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>