force-app/main/default/objects/Collateral_Detail__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Reference</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>